# grammarCLI

./: README.md  install.sh  pyproject.toml
grammar_cli/: checker.py  clipboard.py  config.py  interactive.py  main.py  models.py  protocols.py  renderer.py
grammar_cli/engines/: languagetool.py  mock_engine.py
hammerspoon/: grammar.lua  install_hotkey.sh  uninstall_hotkey.sh
tests/: test_checker.py  test_cli.py  test_config.py  test_mock_engine.py  test_models.py  test_renderer.py
