[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grammarCLI"
version = "0.1.0"
description = "Terminal grammar checker with Grammarly-like UX"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "pyperclip>=1.8",
]

[project.scripts]
grammarCLI = "grammar_cli.main:cli"

[tool.setuptools.packages.find]
include = ["grammar_cli*"]
